add - meaningfull title

--- a/mergeConflictDemo.html
+++ b/mergeConflictDemo.html
@@ -1,7 +1,7 @@
 <html>
     <header>
         <title>
-            Demo
+            Demo - merge conflict
         </title>
     </header>
 </html>
